##Text encoding: utf-8

2011-11-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* gnumeric/functions.cc: remove extra white space in function help.
	* libs/gcp/document.cc: don't access a NULL object on pasting.
	* libs/gcu/chem3ddoc.cc: always ensure the view distance is valid.
	* libs/gcu/chem3ddoc.h: ditto.
	* libs/gcu/gldocument.cc: ditto.
	* libs/gcu/macros.h: new GCU_PROP_EX macro.

2011-11-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gchemutils.cc: use a better property name.
	* goffice/gogchem3dapp.cc: fix size on loading.
	* goffice/gogcrystalapp.cc: no need to change the content type for a
	CIF file if we don't treat any error.

2011-11-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcugtk/spectrumview.cc: fixed build with gtk+-3.2.

2011-11-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/arrows/org.gnome.gchemutils.paint.plugins.arrows.gs
	chema.xml.in.in: fixed paths.
	* schemas/org.gnome.gchemutils.crystal.gschema.xml.in.in: ditto.
	* schemas/org.gnome.gchemutils.gschema.xml.in.in: ditto.
	* schemas/org.gnome.gchemutils.paint.gschema.xml.in.in: ditto.

2011-11-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/selection/group.cc: make Group derive from DialogOwner
	so that its property box can be non modal.
	* plugins/paint/selection/group.h: ditto.
	* plugins/paint/selection/groupdlg.cc: the dialog can now belong to the
	group if any.
	* plugins/paint/selection/selectiontool.cc: ensure we don't open two group
	dialogs at once.

2011-11-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* COPYING-DOCS: updated to GFDL 1.3.
	* docs/help/*/C/legal.xml: ditto.
	* plugins/paint/selection/group.ui: fixed alignment and group dialog.
	* plugins/paint/selection/groupdlg.cc: ditto.

2011-11-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gogchem3dapp.cc: add a nil pointer to the documents list to
	avoid an unwanted call to gtk_main_quit().

2011-11-14  Jean Bréfort  <jean.brefort@normalesup.org>