@@ -23,6 +23,7 @@
 #include "config.h"
 #include "gchemutils-priv.h"
 #include "gogchem3dapp.h"
+#include "gogchem3dwin.h"
 #include <gcugtk/chem3ddoc.h>
 #include <gcu/glview.h>
 #include <glib/gi18n-lib.h>
@@ -42,22 +43,45 @@ void GOGChem3dApplication::ImportDocument (GOGChemUtilsComponent *gogcu)
 {
 	gcugtk::Chem3dDoc *doc = new gcugtk::Chem3dDoc (this, NULL);
 	GOComponent *component = GO_COMPONENT (gogcu);
+	g_free (gogcu->data);
+	gogcu->data = reinterpret_cast < char * > (g_malloc (component->length));
+	gogcu->length = component->length;
+	memcpy (gogcu->data, component->data, gogcu->length);
 	gcu::ContentType type = doc->LoadData (component->data, component->mime_type, component->length);
 	if (type != gcu::ContentType3D) {
 		// FIXME: load in the appropriate application, may be asking in case of a 2d view 
 	}
 	gogcu->document = doc;
+	gcu::GLView *view = doc->GetView ();
+	view->SetRotation (gogcu->psi, gogcu->theta, gogcu->phi);
+	doc->SetDisplay3D (gogcu->mode);
 	component->resizable = true;
 }
 
 GtkWindow *GOGChem3dApplication::EditDocument (GOGChemUtilsComponent *gogcu)
 {
-	return NULL; // FIXME
+	GOGChem3dWindow *win = NULL;
+	try {
+		win = new GOGChem3dWindow (this, gogcu);
+		if (!win)
+			return NULL;
+		win->Show ();	// ensure the window is visible
+		return win->GetWindow ();
+	}
+	catch (int i) {
+		if (win)
+			delete win;
+		return NULL;
+	}
 }
 
 bool GOGChem3dApplication::GetData (GOGChemUtilsComponent *gogcu, gpointer *data, int *length, void (**clearfunc) (gpointer), gpointer *user_data)
 {
-	return false; // FIXME
+	*data = gogcu->data;
+	*length = gogcu->length;
+	*clearfunc = NULL;
+	*user_data = NULL;
+	return true;
 }
 
 void GOGChem3dApplication::Render (GOGChemUtilsComponent *gogcu, cairo_t *cr, double width, double height)
@@ -66,6 +90,7 @@ void GOGChem3dApplication::Render (GOGChemUtilsComponent *gogcu, cairo_t *cr, do
 	doc->GetView ()->RenderToCairo (cr, width, height, false);
 }
 
-void GOGChem3dApplication::UpdateBounds (GOGChemUtilsComponent *gogcu)
+void GOGChem3dApplication::UpdateBounds (GOGChemUtilsComponent *)
 {
+	// nothing to do
 }
